# aita-lagun

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  LICENSE  README.md  WRITEUP.md  pyproject.toml  requirements.txt  run.ps1
.atl/: .skill-registry.cache.json  skill-registry.md
agents/: __init__.py  agent.py  info_salud_agent.py  orchestrator.py
app/: __init__.py  agent_runner.py  main.py
app/static/: app.js  index.html  styles.css
mcp_servers/: __init__.py  calendar_mcp.py  pdf_mcp.py
openspec/: config.yaml
openspec/changes/archive/2026-06-23-adk-mcp-real-integration/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-23-writeup-kaggle/: exploration.md  proposal.md
openspec/changes/archive/2026-06-25-kaggle-submission-polish/: apply-progress.md  archive-report.md  design.md  proposal.md  spec.md  tasks.md  verify-report.md
openspec/changes/brutalist-ui-redesign/: design.md  proposal.md  spec.md  tasks.md  verify-report.md
openspec/changes/recurrencia-recordatorios/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/visual-design-assets/: design.md  proposal.md  spec.md  tasks.md
skills/: SKILL.md
tests/: __init__.py
tests/unit/: test_agents.py  test_calendar_mcp.py  test_chat_api.py  test_pdf_mcp.py
